--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<h1>function simplified 7 x 8</h1><br>
+  <h2 id=answer ></h2></br>
 
+<script> 
+  document.write("javascript answer  ╞ ");
+
+
+const multi = (a,b) => a*b   //♥☼♀ the magic ♀♫ö
+
+document.getElementById("answer").innerHTML = multi;
+
+document.write(multi(7,8));
+  </script>
